infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  
  rules:
    - host: ecommerce.chat.dev
      http:
        paths:
          # - path: /api/admin/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: auth-srv
          #       port:
          #         number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3001  
          - path: /api/store/?(.*)
            pathType: Prefix
            backend:
              service:
                name: store-srv
                port:
                  number: 3004     
          - path: /api/product/?(.*)
            pathType: Prefix
            backend:
              service:
                name: product-srv
                port:
                  number: 3002  
          - path: /api/order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-srv
                port:
                  number: 3003      
          # - path: /api/chats/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: chat-service-srv
          #       port:
          #         number: 3001
